Fix text align in dialog input

--- a/app/less/_dialog.less
+++ b/app/less/_dialog.less
@@ -474,9 +474,11 @@
       color: #333;
       margin: 0;
       font-weight: @fw-regular;
-      text-align: center;
+      text-align: left;
       border-radius: 0;
       border-bottom: 1px solid transparent !important;
+      padding-left: 0;
+      padding-right: 0;
 
       max-width: 99.99% !important;
       transition: width 0.25s;
